# pomogite

./: pyproject.toml
games_project_evseev/: Makefile  pyproject.toml
games_project_evseev/VD_games/: engine.py
games_project_evseev/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_prime.py  VD_progression.py  pyproject.toml
