[project]
name = "games-project-evseev"
version = "0.1.0"
description = "VD Games Project"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
VD-games = "scripts.VD_main:main"
