[project]
name = "games-project-evseev"
version = "0.1.0"
description = "VD Games Project"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games", "scripts"]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
VD-games = "scripts.VD_main:main"
VD-even = "scripts.VD_even:main"
